Misc: - Add some comments - Make logoloader module add init class, so it is possible to e.g. hide the logo or the arc_cover when the animation has not yet started - Use event delegation with menu - Make reviews slider more responsive - Fix problem with slogan in header overlapping nav trigger

--- a/src/styles/components/_logo-animation.scss
+++ b/src/styles/components/_logo-animation.scss
@@ -25,7 +25,7 @@
     height: 71px;
     border-radius: 50%;
     border: 1px solid;
-    border-color: transparent white transparent transparent;
+    border-color: transparent #fff transparent transparent;
     transform: rotate(-45deg);
     transition: width $smallHeaderTransition, height $smallHeaderTransition;
     .small-header & {
@@ -34,14 +34,18 @@
     }
   }
   &__cover {
-    position:absolute;
+    display: none;
+    position: absolute;
     top: 0px;
     left: 0px;
     width: 50%;
     height: 50%;
     border-top-left-radius: 100%;
-    border: 5px solid #00AB9A;
+    border: 5px solid $primary;
     border-right: transparent;
     border-bottom: transparent;
+    .init & {
+      display: block;
+    }
   }
 }
